Loader service, scene model, render loop, wizard frame duration

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Pseudo Mario Fun!</title>
+    <style media="screen">
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
 
-    <div id="content"></div>
+    <canvas id="content"></canvas>
 
     <script src="dist/bundle.js" charset="utf-8" async></script>
   </body>
